[gd_scene load_steps=10 format=3 uid="uid://dtway2rdbqemd"]

[ext_resource type="Script" path="res://scripts/newspaper.gd" id="1_rqnfp"]
[ext_resource type="Texture2D" uid="uid://bi5ntphtfk37k" path="res://sprites/newspaper/Jornalvencedorperdedor.png" id="2_841pp"]
[ext_resource type="AudioStream" uid="uid://b7pj21yk0yykx" path="res://audio/bossa.mp3" id="3_2ffea"]

[sub_resource type="Gradient" id="Gradient_xo3el"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y7ot1"]
gradient = SubResource("Gradient_xo3el")

[sub_resource type="Gradient" id="Gradient_5ak5l"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_knauw"]
gradient = SubResource("Gradient_5ak5l")

[sub_resource type="Animation" id="Animation_sb075"]
resource_name = "Fadein"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 4.8, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c2mmx"]
_data = {
"Fadein": SubResource("Animation_sb075")
}

[node name="newspaper" type="Node2D"]
script = ExtResource("1_rqnfp")

[node name="NewspaperSprite" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_841pp")

[node name="ImageWinner" type="Sprite2D" parent="."]
position = Vector2(606, 723)
scale = Vector2(0.23, 0.23)
texture = SubResource("GradientTexture2D_y7ot1")

[node name="ImageLoser" type="Sprite2D" parent="."]
position = Vector2(1406.5, 862)
scale = Vector2(0.13, 0.13)
texture = SubResource("GradientTexture2D_knauw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c2mmx")
}

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2ffea")
autoplay = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
